--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@types/react": "^18.0.9",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
@@ -40,9 +39,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "18.0.1",
     "@types/react-native": "~0.66.13",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
