--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moon-bird/api",
+  "name": "@moon-bird/app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,31 @@
     "eject": "expo eject",
     "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.1",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "expo": "~45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-font": "~10.1.0",
+    "expo-linking": "~3.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-system-ui": "~1.2.0",
+    "expo-web-browser": "10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-ui-lib": "^6.16.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
