--- a/app/package.json
+++ b/app/package.json
@@ -34,13 +34,16 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-ui-lib": "^6.16.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@svgr/webpack": "^6.2.1",
     "jest": "^26.6.3",
-    "jest-expo": "~45.0.0"
+    "jest-expo": "~45.0.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
