--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
